# qt-hello

./: CMakeLists.txt  README.md  main.cpp  plugin.cpp  plugin.h  qt-hello.changes  qt-hello.pro  qt-hello.spec  test.html
